--- a/index.html
+++ b/index.html
@@ -26,14 +26,37 @@
           <div class="logo">
             <img src="images/Logo.png" alt="company logo" class="" />
           </div>
+          <div class="menu-icon">
+            <img src="images/menu.svg" alt="" />
+          </div>
           <div class="right-section">
             <div class="navigation">
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="#quotes">About Us</a></li>
+                <li><a href="#what-we-offer">Services</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact-us">Contact</a></li>
+              </ul>
+            </div>
+            <div class="road-assistance">
+              <div class="icon">
+                <i class="fas fa-phone-alt"></i>
+              </div>
+              <div class="inner-section">
+                <p class="road-asst">Road Assistance</p>
+                <p>1800 265 24 52</p>
+              </div>
+            </div>
+          </div>
+          <div class="mobile-nav">
+            <div class="navigation-mobile">
+              <ul class="menu-items">
+                <li><a href="/">Home</a></li>
+                <li><a href="#quotes">About Us</a></li>
+                <li><a href="#what-we-offer">Services</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#contact-us">Contact</a></li>
               </ul>
             </div>
             <div class="road-assistance">
@@ -50,7 +73,7 @@
       </div>
     </header>
     <!-- Hero Section -->
-    <section id="hero">
+    <div id="hero">
       <div class="container">
         <div class="flex hero">
           <div class="left-hero flex-column">
@@ -89,10 +112,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
     <!-- Hero Section Ends -->
     <!-- Quote Section Begins -->
-    <section id="quotes">
+    <section id="quotes" class="grey-section">
       <div class="container quotes">
         <div class="leftside-quotes">
           <h2>We are taking car servicing seriously</h2>
@@ -235,7 +258,7 @@
       </div>
     </section>
     <!-- Process Ends -->
-    <section id="what-we-offer">
+    <section id="what-we-offer" class="grey-section">
       <div class="wrapper">
         <div class="title">
           <p>What we Offer</p>
@@ -405,5 +428,159 @@
         </div>
       </div>
     </section>
+    <section id="reviews">
+      <div class="title">
+        <h3>
+          Our customers say the nicest things <br />
+          about our service
+        </h3>
+      </div>
+      <div class="container flex">
+        <div class="reviews-card">
+          <div class="profile-label flex-2">
+            <img src="images/Johnathan.png" alt="" />
+            <div class="name-labe">
+              <p class="title-02">Jonathan Vallem</p>
+              <p class="place-label">New york</p>
+            </div>
+          </div>
+          <div class="review-body">
+            <p>
+              I have got my car repaired at Finsweet many times before, they are
+              good at what they do. Not only did they repair my car in a short
+              comprehensive look on all the working
+            </p>
+          </div>
+        </div>
+        <div class="reviews-card card">
+          <div class="profile-label flex-2">
+            <img src="images/smith.jpg" alt="" />
+            <div class="name-label">
+              <p class="title-02">Smith Johnson</p>
+              <p class="place-label">New york</p>
+            </div>
+          </div>
+          <div class="review-body">
+            <p>
+              I have got my car repaired at Finsweet many times before, they are
+              good at what they do. Not only did they repair my car in a short
+              comprehensive look on all the working
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="review-nav container">
+        <div class="hr">
+          <hr />
+          <hr />
+          <hr class="active-hr" />
+          <hr />
+        </div>
+        <div class="review-arrows">
+          <div class="left-arrow"></div>
+          <div class="right-arrow"></div>
+        </div>
+      </div>
+    </section>
+    <section id="FAQ">
+      <div class="title">
+        <h3>Frequently Asked Questions</h3>
+      </div>
+      <div class="faq container">
+        <button class="accordion">How long should a car repair take?</button>
+        <div class="panel">
+          <p>
+            I have got my car repaired at Finsweet many times before, they are
+            good at what they do. Not only did they repair my car I have got my
+            car repaired at Finsweet I have got my car repaired at Finsweet
+          </p>
+        </div>
+
+        <button class="accordion">
+          How do I schedule my car's appointment ?
+        </button>
+        <div class="panel">
+          I have got my car repaired at Finsweet many times before, they are
+        </div>
+        <button class="accordion">
+          What are the repair services provided?
+        </button>
+        <div class="panel">
+          I have got my car repaired at Finsweet many times before, they are
+        </div>
+        <button class="accordion">
+          How do I find auto body shops near me?
+        </button>
+        <div class="panel">
+          I have got my car repaired at Finsweet many times before, they are
+        </div>
+
+        <button class="accordion">
+          Genuine spare parts during car repair?
+        </button>
+        <div class="panel">
+          I have got my car repaired at Finsweet many times before, they are
+        </div>
+      </div>
+    </section>
+    <!-- FOOTER Begins -->
+    <footer id="footer">
+      <div class="container">
+        <div class="top-footer flex">
+          <div class="left-top-footer">
+            <h3>Get in touch with us for your service</h3>
+            <div class="footer-icons">
+              <ul class="flex-2">
+                <li><img src="images/fb.png" alt="" /></li>
+                <li><img src="images/tw.png" alt="" /></li>
+                <li><img src="images/ins.png" alt="" /></li>
+                <li><img src="images/link.png" alt="" /></li>
+              </ul>
+            </div>
+          </div>
+          <div class="right-top-footer">
+            <ul>
+              <li>
+                <p class="footer-title">Help line Number</p>
+                <p>1800 265 24 52</p>
+              </li>
+              <li>
+                <p class="footer-title">Address</p>
+                <p>NH 234 Public Square San Francisco 65368</p>
+              </li>
+              <li>
+                <p class="footer-title">We are open</p>
+                <p>Monday to Friday 9:00 AM to  10:00  AM</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="bottom-footer">
+        <div class="container flex">
+          <div class="logo">
+            <img src="images/Logo-white.png" alt="company logo" class="" />
+          </div>
+          <div class="right-section">
+            <div class="navigation">
+              <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="#quotes">About Us</a></li>
+                <li><a href="#what-we-offer">Services</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#contact-us">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="road-assistance">
+            <div class="inner-section">
+              <p class="road-asst">@ Copyright Finsweet 2021</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
